--- a/reg.html
+++ b/reg.html
@@ -38,10 +38,10 @@
                data-uk="Як до вас звертатися?">
                How should we call you?
         </label>
-        <input id="nickname" name="nickname" type="text" required placeholder="nickname or alias" />
+        <input id="nickname" name="nickname" type="text" required placeholder="nickname or alias" data-uk="нікнейм або ім'я" />
 
         <label for="email" data-en="Email" data-uk="Електронна пошта">Email</label>
-        <input id="email" name="email" type="email" required placeholder="you@example.com" />
+        <input id="email" name="email" type="email" required placeholder="you@example.com" data-uk="poshta@ukr.net" />
 
         <label for="notes" data-en="Note (optional)" data-uk="Примітка (необов'язково)">Note (optional)</label>
         <textarea id="notes" name="notes" rows="3"></textarea>
