--- a/index.html
+++ b/index.html
@@ -1,148 +1,87 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lmaxcoin - Luxmaxing</title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
+    <title>Щитка Inside Walker</title>
     <style>
-        * {
+        body {
+            background-color: #1a1a1a;
+            color: #e0e0e0;
+            font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Montserrat', sans-serif;
-            background: linear-gradient(135deg, #1a1a1a 0%, #2c2c2c 100%);
-            color: #fff;
-            overflow-x: hidden;
             display: flex;
-            justify-content: center;
+            flex-direction: column;
             align-items: center;
             min-height: 100vh;
-            flex-direction: column;
+        }
+        header {
+            padding: 20px;
             text-align: center;
         }
-
-        .container {
-            max-width: 1200px;
-            padding: 20px;
-            animation: fadeIn 1.5s ease-in-out;
-        }
-
-        .monkey {
-            width: 100%;
-            max-width: 400px;
-            margin: 0 auto;
-            animation: bounce 2s infinite ease-in-out;
-        }
-
-        .monkey svg {
-            width: 100%;
-            filter: drop-shadow(0 0 20px rgba(255, 215, 0, 0.5));
-        }
-
-        .title {
-            font-size: 4rem;
-            font-weight: bold;
-            color: #ffd700;
+        h1 {
+            font-size: 2.5em;
+            margin: 0;
             text-transform: uppercase;
             letter-spacing: 2px;
-            margin-top: 20px;
-            animation: glow 2s infinite alternate;
-            text-shadow: 0 0 10px rgba(255, 215, 0, 0.8);
         }
-
-        .subtitle {
-            font-size: 1.5rem;
-            color: #ccc;
-            margin-top: 10px;
-            animation: fadeIn 2s ease-in-out;
+        .meme-container {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 20px;
+            padding: 20px;
+            max-width: 1200px;
+            width: 100%;
         }
-
-        /* Анимации */
-        @keyframes fadeIn {
-            0% { opacity: 0; transform: translateY(20px); }
-            100% { opacity: 1; transform: translateY(0); }
+        .meme {
+            background-color: #2a2a2a;
+            border-radius: 10px;
+            overflow: hidden;
+            transition: transform 0.3s;
         }
-
-        @keyframes bounce {
-            0%, 100% { transform: translateY(0); }
-            50% { transform: translateY(-20px); }
+        .meme:hover {
+            transform: scale(1.05);
         }
-
-        @keyframes glow {
-            0% { text-shadow: 0 0 10px rgba(255, 215, 0, 0.8); }
-            100% { text-shadow: 0 0 20px rgba(255, 215, 0, 1); }
+        .meme img {
+            width: 100%;
+            height: auto;
+            display: block;
         }
-
-        /* Адаптивность */
-        @media (max-width: 768px) {
-            .title {
-                font-size: 2.5rem;
-            }
-
-            .subtitle {
-                font-size: 1.2rem;
-            }
-
-            .monkey {
-                max-width: 300px;
-            }
+        .meme p {
+            padding: 10px;
+            text-align: center;
+            font-size: 1em;
+            margin: 0;
         }
-
-        @media (max-width: 480px) {
-            .title {
-                font-size: 2rem;
-            }
-
-            .subtitle {
-                font-size: 1rem;
-            }
-
-            .monkey {
-                max-width: 200px;
-            }
+        footer {
+            padding: 20px;
+            text-align: center;
+            font-size: 0.9em;
+            color: #888;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <div class="monkey">
-            <!-- Простое SVG-изображение обезьяны, показывающей средний палец -->
-            <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-                <circle cx="100" cy="100" r="80" fill="#4a4a4a"/>
-                <!-- Лицо обезьяны -->
-                <circle cx="100" cy="80" r="50" fill="#8b5e3c"/>
-                <circle cx="80" cy="70" r="10" fill="#fff"/>
-                <circle cx="120" cy="70" r="10" fill="#fff"/>
-                <circle cx="80" cy="70" r="5" fill="#000"/>
-                <circle cx="120" cy="70" r="5" fill="#000"/>
-                <!-- Рука со средним пальцем -->
-                <rect x="90" y="100" width="20" height="60" fill="#8b5e3c"/>
-                <rect x="95" y="80" width="10" height="30" fill="#8b5e3c"/>
-                <!-- Уши -->
-                <circle cx="60" cy="80" r="15" fill="#8b5e3c"/>
-                <circle cx="140" cy="80" r="15" fill="#8b5e3c"/>
-            </svg>
+    <header>
+        <h1>Щитка Inside Walker</h1>
+    </header>
+    <div class="meme-container">
+        <div class="meme">
+            <img src="https://via.placeholder.com/300x200" alt="Мем 1">
+            <p>Когда щиток заходит не в ту комнату</p>
         </div>
-        <h1 class="title">Lmaxcoin</h1>
-        <p class="subtitle">The Ultimate Luxmaxing Token</p>
+        <div class="meme">
+            <img src="https://via.placeholder.com/300x200" alt="Мем 2">
+            <p>Щиток: *включает свет* Я: АААА</p>
+        </div>
+        <div class="meme">
+            <img src="https://via.placeholder.com/300x200" alt="Мем 3">
+            <p>Inside Walker: ожидания vs реальность</p>
+        </div>
     </div>
-
-    <script>
-        // Плавная анимация при скролле
-        window.addEventListener('scroll', () => {
-            const elements = document.querySelectorAll('.container > *');
-            elements.forEach((el, index) => {
-                const rect = el.getBoundingClientRect();
-                if (rect.top <= window.innerHeight * 0.8) {
-                    el.style.animationDelay = `${index * 0.2}s`;
-                    el.style.opacity = '1';
-                }
-            });
-        });
-    </script>
+    <footer>
+        <p>© 2025 Щитка Inside Walker. Все мемы ради лулзов.</p>
+    </footer>
 </body>
 </html>
