--- a/index.html
+++ b/index.html
@@ -130,7 +130,8 @@
       <button type="submit" class="btn">Зарегистрироваться</button>
     </form>
   </div>
-    
+  
+    <script>
     const form = document.getElementById("preRegForm");
     form.addEventListener("submit", (e) => {
       e.preventDefault();
