--- a/index.html
+++ b/index.html
@@ -9,7 +9,18 @@
 <body>
   <div class="overlay"></div>
 
-  <!-- Форма -->
+  <!-- Countdown Section -->
+  <div class="countdown-card">
+    <h1>It's coming soon</h1>
+    <div id="countdown">
+      <span id="days">00</span> : 
+      <span id="hours">00</span> : 
+      <span id="minutes">00</span> : 
+      <span id="seconds">00</span>
+    </div>
+  </div>
+
+  <!-- Pre-Register Form -->
   <div class="card form">
     <h1>Wapp Pre-Register</h1>
     <form id="preRegForm" action="https://formspree.io/f/xovnbdav" method="POST" novalidate>
@@ -30,7 +41,7 @@
     </form>
   </div>
 
-  <!-- Успех -->
+  <!-- Success -->
   <div class="card success" id="success">
     <div class="circle">
       <svg viewBox="0 0 52 52"><path d="M14 27 L22 35 L38 19"></path></svg>
