--- a/index.html
+++ b/index.html
@@ -1,54 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Wapp — Winter Arc App</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Wapp — Winter Arc App</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="overlay"></div>
 
-  <!-- Countdown Section -->
-  <div class="countdown-card">
-    <h1>It's coming soon</h1>
-    <div id="countdown">
-      <span id="days">00</span> : 
-      <span id="hours">00</span> : 
-      <span id="minutes">00</span> : 
-      <span id="seconds">00</span>
+  <div class="center-container">
+    <!-- Countdown -->
+    <div class="countdown-card">
+      <h1>It's coming soon</h1>
+      <div id="countdown">
+        <span id="days">00</span> :
+        <span id="hours">00</span> :
+        <span id="minutes">00</span> :
+        <span id="seconds">00</span>
+      </div>
+    </div>
+
+    <!-- Pre-Register Form -->
+    <div class="card form">
+      <h1>Wapp Pre-Register</h1>
+      <form id="preRegForm" action="https://formspree.io/f/xovnbdav" method="POST" novalidate>
+        <div class="form-group">
+          <label for="nickname">Nickname</label>
+          <input type="text" id="nickname" name="nickname" placeholder="Nickname" required>
+        </div>
+        <div class="form-group">
+          <label for="email">E-mail</label>
+          <input type="email" id="email" name="email" placeholder="E-mail" required>
+        </div>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input type="password" id="password" name="password" placeholder="Password" required>
+        </div>
+        <div class="msg" id="msg"></div>
+        <button type="submit" class="btn">Submit</button>
+      </form>
+    </div>
+
+    <!-- Success -->
+    <div class="card success" id="success">
+      <div class="circle">
+        <svg viewBox="0 0 52 52"><path d="M14 27 L22 35 L38 19"></path></svg>
+      </div>
+      <div class="success-text">Successful Registration</div>
     </div>
   </div>
 
-  <!-- Pre-Register Form -->
-  <div class="card form">
-    <h1>Wapp Pre-Register</h1>
-    <form id="preRegForm" action="https://formspree.io/f/xovnbdav" method="POST" novalidate>
-      <div class="form-group">
-        <label for="nickname">Nickname</label>
-        <input type="text" id="nickname" name="nickname" placeholder="Nickname" required>
-      </div>
-      <div class="form-group">
-        <label for="email">E-mail</label>
-        <input type="email" id="email" name="email" placeholder="E-mail" required>
-      </div>
-      <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" id="password" name="password" placeholder="Password" required>
-      </div>
-      <div class="msg" id="msg"></div>
-      <button type="submit" class="btn">Submit</button>
-    </form>
-  </div>
-
-  <!-- Success -->
-  <div class="card success" id="success">
-    <div class="circle">
-      <svg viewBox="0 0 52 52"><path d="M14 27 L22 35 L38 19"></path></svg>
-    </div>
-    <div class="success-text">Successful Registration</div>
-  </div>
-
-  <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
