--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Wapp — Winter Arc App</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Wapp — Winter Arc App</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="overlay"></div>
@@ -14,10 +14,25 @@
     <div class="countdown-card">
       <h1>It's coming soon</h1>
       <div id="countdown">
-        <span id="days">00</span> :
-        <span id="hours">00</span> :
-        <span id="minutes">00</span> :
-        <span id="seconds">00</span>
+        <div class="time-block">
+          <span id="days">00</span>
+          <small>Days</small>
+        </div>
+        <div class="separator">:</div>
+        <div class="time-block">
+          <span id="hours">00</span>
+          <small>Hours</small>
+        </div>
+        <div class="separator">:</div>
+        <div class="time-block">
+          <span id="minutes">00</span>
+          <small>Minutes</small>
+        </div>
+        <div class="separator">:</div>
+        <div class="time-block">
+          <span id="seconds">00</span>
+          <small>Seconds</small>
+        </div>
       </div>
     </div>
 
@@ -51,6 +66,6 @@
     </div>
   </div>
 
-  <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
