--- a/index.html
+++ b/index.html
@@ -4,40 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Wapp — Winter Arc App</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
   <div class="overlay"></div>
-
-  <!-- Форма -->
-  <div class="card form">
-    <h1>Wapp Pre-Register</h1>
-    <form id="preRegForm" action="https://formspree.io/f/xovnbdav" method="POST" novalidate>
-      <div class="form-group">
-        <label for="nickname">Nickname</label>
-        <input type="text" id="nickname" name="nickname" placeholder="Nickname" required>
-      </div>
-      <div class="form-group">
-        <label for="email">E-mail</label>
-        <input type="email" id="email" name="email" placeholder="E-mail" required>
-      </div>
-      <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" id="password" name="password" placeholder="Password" required>
-      </div>
-      <div class="msg" id="msg"></div>
-      <button type="submit" class="btn">Submit</button>
-    </form>
+  <div class="container">
+    <h1>Welcome to Wapp</h1>
+    <p>Your Winter Arc Journey Starts Here</p>
+    <a href="prereg.html" class="btn">Pre-Register</a>
   </div>
-
-  <!-- Успех -->
-  <div class="card success" id="success">
-    <div class="circle">
-      <svg viewBox="0 0 52 52"><path d="M14 27 L22 35 L38 19"></path></svg>
-    </div>
-    <div class="success-text">Successful Registration</div>
-  </div>
-
-  <script src="script.js"></script>
 </body>
 </html>
