--- a/index.html
+++ b/index.html
@@ -3,15 +3,59 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Wapp — Winter Arc App</title>
+  <title>Winter Arc App — Wapp</title>
   <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
   <div class="overlay"></div>
-  <div class="container">
-    <h1>Welcome to Wapp</h1>
-    <p>Your Winter Arc Journey Starts Here</p>
+  
+  <!-- Hero Section -->
+  <header class="hero">
+    <div class="hero-content">
+      <h1>Winter Arc App</h1>
+      <p>Challenge yourself. Grow stronger. Earn $WTR.</p>
+      <a href="prereg.html" class="btn">Pre-Register</a>
+    </div>
+  </header>
+
+  <!-- About App -->
+  <section class="section about">
+    <h2>About Wapp</h2>
+    <p>
+      Winter Arc is more than an app — it’s your personal challenge tracker. 
+      Complete daily arc-tasks like taking cold showers, cutting hair, training, and more. 
+      Unlock levels, track your timeline, and push beyond limits.
+    </p>
+    <div class="image-placeholder">App Screenshot Here</div>
+  </section>
+
+  <!-- Token Info -->
+  <section class="section token">
+    <h2>Winter Arc Coin ($WTR)</h2>
+    <p>
+      Earn tokens by completing challenges inside the app. 
+      $WTR is the core currency of the Winter Arc ecosystem. 
+      Collect, trade, and show your growth while stacking real rewards.
+    </p>
+    <div class="image-placeholder">$WTR Logo Here</div>
+  </section>
+
+  <!-- How It Works -->
+  <section class="section how">
+    <h2>How It Works</h2>
+    <div class="steps">
+      <div class="step">1. Join Wapp</div>
+      <div class="step">2. Complete Arc-Challenges</div>
+      <div class="step">3. Earn $WTR & Level Up</div>
+    </div>
+  </section>
+
+  <!-- CTA -->
+  <footer class="footer">
+    <p>Start your Winter Arc journey now</p>
     <a href="prereg.html" class="btn">Pre-Register</a>
-  </div>
+  </footer>
+
+  <script src="assets/js/main.js"></script>
 </body>
 </html>
