--- a/project-root/index.html
+++ b/project-root/index.html
@@ -1,97 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Winter Arc — Wapp</title>
-  <link rel="stylesheet" href="assets/css/style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Winter Arc</title>
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-  <div class="bg">
-    <img src="assets/images/background.jpeg" alt="background" class="bg-img">
-    <div class="bg-overlay"></div>
-    <!-- large decorative letters (subtle, behind content) -->
-    <div class="bg-ghost">WTR</div>
-  </div>
-
-  <header class="site-header">
-    <div class="brand">
-      <div class="badge">$WTR</div>
-      <div class="title-small">Winter Arc</div>
-    </div>
-    <nav>
-      <a href="#about" class="nav-link">About</a>
-      <a href="#token" class="nav-link">Token</a>
-      <a href="prereg.html" class="nav-cta">Pre-Register</a>
-    </nav>
-  </header>
-
-  <main class="hero">
-    <div class="hero-inner">
-      <h1 class="hero-title">Winter Arc</h1>
-      <p class="hero-lead">Become part of the Winter Arc — complete cold-edge challenges, earn $WTR and rise through levels. Minimalist. Brutal. Rewarding.</p>
-      <div class="hero-cta">
-        <a class="btn-primary" href="prereg.html" id="ctaPrereg">Join Pre-Register</a>
-        <button class="btn-ghost" id="learnBtn">Learn more</button>
-      </div>
-      <div class="meta">
-        <div class="meta-item">
-          <div class="meta-key">App</div>
-          <div class="meta-val">Winter Arc (Wapp)</div>
-        </div>
-        <div class="meta-item">
-          <div class="meta-key">Token</div>
-          <div class="meta-val">$WTR</div>
-        </div>
-      </div>
-    </div>
-  </main>
-
-  <section id="about" class="panel">
-    <div class="panel-inner">
-      <h2 class="panel-title">What is Winter Arc?</h2>
-      <p class="panel-text">Winter Arc is a challenge-driven app where users complete real-life “Winter Arc” missions — cold showers, run, radical haircut, outdoor exposure and more — and earn $WTR tokens as rewards. Track your profile, levels, timeline and statistics. Social and competitive features will appear as the project evolves.</p>
-
-      <div class="features">
-        <article class="feature">
-          <h3>Tasks</h3>
-          <p>Daily and weekly missions of different difficulties — physical, mental, lifestyle. Complete, record, claim tokens.</p>
-        </article>
-        <article class="feature">
-          <h3>Profile & Stats</h3>
-          <p>Personal profile, levels, timelines and performance graphs — see your progression over time.</p>
-        </article>
-        <article class="feature">
-          <h3>Claim & Use</h3>
-          <p>Earn $WTR for tasks, later claim/withdraw or use within the ecosystem (details to come).</p>
-        </article>
-      </div>
+  <!-- Hero Section -->
+  <section class="hero">
+    <div class="overlay"></div>
+    <div class="hero-content">
+      <h1 class="title">Winter Arc</h1>
+      <p class="subtitle">Survive the arc. Earn the coin. Become unbreakable.</p>
+      <a href="prereg.html" class="cta-button">Enter Pre-Registration</a>
     </div>
   </section>
 
-  <section id="token" class="panel alt">
-    <div class="panel-inner">
-      <h2 class="panel-title">Winter Arc Coin — $WTR</h2>
-      <p class="panel-text">$WTR is the in-app reward token associated with Winter Arc. Tokens are earned for verified mission completions and can be claimed within the app. Tokenomics and distribution are designed to reward activity and community growth.</p>
-
-      <ul class="token-list">
-        <li><strong>Name</strong><span>Winter Arc Coin</span></li>
-        <li><strong>Symbol</strong><span>$WTR</span></li>
-        <li><strong>Used for</strong><span>Rewards, in-app economy, future features</span></li>
-      </ul>
+  <!-- Info Section -->
+  <section class="info">
+    <div class="card">
+      <h2>Winter Arc App</h2>
+      <p>Complete extreme arc challenges: cold showers, shaved head, running & more. Track stats, level up, and build your legacy.</p>
+    </div>
+    <div class="card">
+      <h2>$WTR Token</h2>
+      <p>Earn tokens by completing Winter Arc tasks. Claimable soon, usable across the ecosystem.</p>
+    </div>
+    <div class="card secret">
+      <h2>Timeline</h2>
+      <p><span class="hidden">Token Launch — Oct 1, 00:00 UTC</span></p>
+      <p><span class="hidden">App Release — Oct 1, 12:00 UTC</span></p>
     </div>
   </section>
 
-  <footer class="site-footer">
-    <div class="footer-inner">
-      <div>© Winter Arc — Minimal interface for maximum effect</div>
-      <div class="small-links">
-        <a href="prereg.html">Pre-Register</a>
-        <a href="#about">About</a>
-      </div>
+  <!-- Footer -->
+  <footer>
+    <p>© 2025 Winter Arc</p>
+    <div class="links">
+      <a href="#">Discord</a>
+      <a href="#">X</a>
+      <a href="#">Telegram</a>
     </div>
   </footer>
 
-  <script src="assets/js/main.js"></script>
+  <script src="assets/js/script.js"></script>
 </body>
 </html>
